SDEV-1602 - Add paginated remediation support for the public priorities endpoint (#12520)
Co-authored-by: Anastasia Van Riet <110420624+anastasia-vanriet@users.noreply.github.com>